--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -35,6 +35,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , hspec
+    , hspec-discover
   default-language: Haskell2010
 
 executable haskell-router-exe
@@ -49,6 +51,8 @@ executable haskell-router-exe
   build-depends:
       base >=4.7 && <5
     , haskell-router
+    , hspec
+    , hspec-discover
   default-language: Haskell2010
 
 test-suite haskell-router-test
@@ -64,4 +68,6 @@ test-suite haskell-router-test
   build-depends:
       base >=4.7 && <5
     , haskell-router
+    , hspec
+    , hspec-discover
   default-language: Haskell2010
