More project structure

--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,7 +25,8 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Router.Packet
+      Router.Parser
   other-modules:
       Paths_haskell_router
   autogen-modules:
@@ -35,11 +36,13 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , hspec
     , hspec-discover
+    , pcap
   default-language: Haskell2010
 
-executable haskell-router-exe
+executable haskell-router
   main-is: Main.hs
   other-modules:
       Paths_haskell_router
@@ -50,9 +53,11 @@ executable haskell-router-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , haskell-router
     , hspec
     , hspec-discover
+    , pcap
   default-language: Haskell2010
 
 test-suite haskell-router-test
@@ -67,7 +72,9 @@ test-suite haskell-router-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , haskell-router
     , hspec
     , hspec-discover
+    , pcap
   default-language: Haskell2010
