refactor and add types

--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Router.Args
+      Router.Layers
       Router.Packet
       Router.Parser
   other-modules:
