Changed structure to seperate layer function

--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -29,6 +29,10 @@ library
       Router.Layers
       Router.Packet
       Router.Parser
+      Router.Layers.Ethernet
+      Router.Layers.Tcp
+      Router.Layers.Ip
+      Router.Layers.Txt
   other-modules:
       Paths_haskell_router
   autogen-modules:
