Added a util funciton file and a function that creates a SSID

--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -33,6 +33,8 @@ library
       Router.Layers.Tcp
       Router.Layers.Ip
       Router.Layers.Txt
+      Router.Layers.BeaconFrame
+      Router.Util
   other-modules:
       Paths_haskell_router
   autogen-modules:
