Fixing it so it runs

--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -36,6 +36,8 @@ library
       Router.Packet
       Router.Parser
       Router.Services.Beacon
+      Router.Services.Receiver
+      Router.Services.Sender
       Router.Util
   other-modules:
       Paths_haskell_router
