Added a simple beacon loop function that each time has a delay and gets the time in microseconds

--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -52,6 +52,7 @@ library
     , hspec
     , hspec-discover
     , pcap
+    , time
   default-language: Haskell2010
 
 executable haskell-router
@@ -70,6 +71,7 @@ executable haskell-router
     , hspec
     , hspec-discover
     , pcap
+    , time
   default-language: Haskell2010
 
 test-suite haskell-router-test
@@ -89,4 +91,5 @@ test-suite haskell-router-test
     , hspec
     , hspec-discover
     , pcap
+    , time
   default-language: Haskell2010
