Added a function to get the mac address for the network device

--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -35,6 +35,7 @@ library
       Router.Layers.Udp
       Router.Packet
       Router.Parser
+      Router.RouterInfo
       Router.Services.Beacon
       Router.Services.Receiver
       Router.Services.Sender
