--- a/haskell-router.cabal
+++ b/haskell-router.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -52,6 +52,8 @@ library
     , hspec
     , hspec-discover
     , pcap
+    , syb
+    , text
   default-language: Haskell2010
 
 executable haskell-router
@@ -70,6 +72,8 @@ executable haskell-router
     , hspec
     , hspec-discover
     , pcap
+    , syb
+    , text
   default-language: Haskell2010
 
 test-suite haskell-router-test
@@ -89,4 +93,6 @@ test-suite haskell-router-test
     , hspec
     , hspec-discover
     , pcap
+    , syb
+    , text
   default-language: Haskell2010
