--- a/package.yaml
+++ b/package.yaml
@@ -38,6 +38,7 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -fprint-potential-instances
 
 library:
   source-dirs: src
